test/errors/executor/runtime_type_unary_negative.ms
print -"ryan"
// Runtime Error - Type (Line 1, Column 14): unary negative expects a number, instead got TYPE_STRING
